correction h3 animation check : version mobile

--- a/sass/pages/_main-menus.scss
+++ b/sass/pages/_main-menus.scss
@@ -27,8 +27,10 @@
     h3 {
         padding: 0;
         margin: 0;
-        width: 90%;
-        @include Ellipse;
+        width: 85%;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 }
 
