--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -86,8 +86,10 @@
     }
 
     h3 {
-        width: 70%;
-        @include Ellipse;
+        padding-right: 10%;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 }
 
